--- a/05_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/05_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -102,16 +102,7 @@
             <div class="new_title">
                 <h2>Sản phẩm khuyến mại</h2>
             </div>
-            @*<div class="cate-banner-img">
-                @if (ViewData["AdsSlide2"] != null)
-                {
-                    Ads[] slide = (Ads[])ViewData["AdsSlide2"];
-                    if (slide.Length > 0)
-                    {
-                        <img src="@slide[0].ImagesUrl" alt="@slide[0].Description" />
-                    }
-                }
-            </div>*@
+            
             <div id="best-seller" class="product-flexslider hidden-buttons">
                 <div class="slider-items slider-width-col4 products-grid">
                     @if (ViewData["saleProduct"] != null)
@@ -194,8 +185,8 @@
                 <h2>Sản phẩm bán chạy</h2>
             </div>
             <!--Xoa row-->
-            <div class="category-products">
-                <ul class="products-grid small-grid">
+            <div id="best-seller" class="product-flexslider hidden-buttons">
+                <div class="slider-items slider-width-col4 products-grid">
                     @if (ViewData["BestsaleProduct"] != null)
                     {
                         AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
@@ -203,11 +194,11 @@
                         {
                             foreach (ProductItem item in bestSaleList.Item)
                             {
-                                <li class="item col-lg-2 col-md-2 col-sm-2 col-xs-6">
+                                <div class="item">
                                     <div class="item-inner">
                                         <div class="item-img">
                                             <div class="item-img-info">
-                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="product-image">
+                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName" class="product-image">
                                                     <img src="@item.Images" alt="@item.PrName">
                                                 </a>
                                                 @if (item.IsSale)
@@ -221,7 +212,7 @@
                                                 <div class="item-box-hover">
                                                     <div class="box-inner">
                                                         <div class="product-detail-bnt">
-                                                            <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="button detail-bnt" type="button">
+                                                            <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">
                                                                 <span>Chi tiết</span>
                                                             </a>
                                                         </div>
@@ -232,7 +223,9 @@
                                         <div class="item-info">
                                             <div class="info-inner">
                                                 <div class="item-title">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.PrName</a> 
+                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">
+                                                        @item.PrName
+                                                    </a>
                                                 </div>
                                                 <div class="item-content">
                                                     <div class="rating">
@@ -245,17 +238,18 @@
                                                     </div>
                                                     <div class="item-price">
                                                         <div class="price-box">
-                                                            <span class="regular-price" id="product-price-1">
+                                                            <span class="regular-price">
+                                                                @*<span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>*@
                                                                 @if (item.IsSale)
                                                                 {
-                                                                    <span class="price old-price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> 
-                                                                    <span class="special-price price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span> 
+                                                                    <span class="old-price price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
+                                                                    <span class="special-price price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
                                                                 }
                                                                 else
                                                                 {
-                                                                    <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> 
+                                                                    <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
                                                                 }
-                                                            </span> 
+                                                            </span>
                                                         </div>
                                                     </div>
                                                     <div class="add_cart">
@@ -265,11 +259,11 @@
                                             </div>
                                         </div>
                                     </div>
-                                </li>
+                                </div>
                             }
                         }
                     }
-                </ul>
+                </div>
             </div>
         </div>
     </section>
