add social pull-right

--- a/05_Shop_MultiProduct/Views/Article/Index.cshtml
+++ b/05_Shop_MultiProduct/Views/Article/Index.cshtml
@@ -61,7 +61,7 @@
                         </div>
                         <div class="blog-shop">
                             <div class="social">
-                                <ul>
+                                <ul class="pull-right">
                                     <li class="fb pull-left"><a target="_blank" rel="nofollow" href="http://www.facebook.com/share.php?u=@ViewBag.WebsiteUrl" title="Facebook"></a></li>
                                     <li class="tw pull-left"><a target="_blank" rel="nofollow" href="http://www.twitter.com/share?url=@ViewBag.WebsiteUrl" title="Twitter"></a></li>
                                     <li class="googleplus pull-left"><a target="_blank" rel="nofollow" href="https://plus.google.com/share?url=@ViewBag.WebsiteUrl" title="GooglePlus"></a></li>
