--- a/04_Shop_multiProduct/Views/Product/Category.cshtml
+++ b/04_Shop_multiProduct/Views/Product/Category.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="page-top">
+﻿
+<div class="page-top">
     <div class="container">
      
         <div class="row">
@@ -118,3 +119,9 @@
     </div>
 </div>
 </div>
+@section scripts{
+
+<script src="/assets/lib/countdown/jquery.plugin.js"></script>
+    <script src="/assets/lib/countdown/jquery.countdown.js"></script>
+<script src="/assets/lib/countdown/jquery.countdown-vi.js"></script>
+}
