--- a/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -34,6 +34,8 @@
                         {
                             for (int i = 0; i < commonInfo.ProductCategoryList.Length; i++)
                             {
+                                
+                                <option value="c-@commonInfo.ProductCategoryList[i].Id">@commonInfo.ProductCategoryList[i].Name</option>
                                 if (commonInfo.ProductCategoryList[i].ChildCategory != null && commonInfo.ProductCategoryList[i].ChildCategory.Length > 0)
                                 {
                                     for (int j = 0; j < commonInfo.ProductCategoryList[i].ChildCategory.Length; j++)
