--- a/09_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/09_Shop_MultiProduct/assets/stylesheet/style.css
@@ -149,7 +149,7 @@ header {
     padding-right: 25px;
     padding-left: 20px;
     margin-top: -41px;
-    background: #88be4c;
+    background: #f5e416;
     height: 116px;
     margin-right: 15px;
 }
@@ -4929,7 +4929,7 @@ text-transform: uppercase
             font-family: 'Montserrat', sans-serif;
             letter-spacing: 0.5px;
             text-transform: uppercase;
-            background: #88be4c;
+            background: #f5e416;
             margin-top: 0px;
             min-width: 250px;
         }
@@ -11456,7 +11456,7 @@ button.button.login:before {
         font-family: 'Montserrat', sans-serif;
         letter-spacing: 0.5px;
         text-transform: uppercase;
-        background: #88be4c;
+        background: #f5e416;
         margin-top: 0px;
     }
 
@@ -11606,7 +11606,6 @@ footer a {
 footer .footer-inner {
     margin: auto;
     overflow: hidden;
-    background: url(/assets/images/footer-img.png) no-repeat bottom center;
 }
 
     footer .footer-inner h3 {
