--- a/09_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/09_Shop_MultiProduct/assets/stylesheet/style.css
@@ -3811,6 +3811,7 @@ ul.pdt-list li.item a img.image-hover {
 
         .products-grid .item .item-inner .item-img {
             position: relative;
+            overflow:hidden;
             border: 1px #eaeaea solid;
         }
 
@@ -3846,15 +3847,18 @@ ul.pdt-list li.item a img.image-hover {
                 transition: all 0.3s ease-out;
                 position: relative;
                 overflow: hidden;
+                height:inherit;
             }
 
                 .products-grid .item .item-inner .item-img .item-img-info a.product-image {
                     display: block;
                     width: 100%;
+                    height:inherit;
                 }
 
                     .products-grid .item .item-inner .item-img .item-img-info a.product-image img {
-                        width: 100%;
+                        height: 100%;
+                        width:auto;
                     }
 
             .products-grid .item .item-inner .item-img:hover img {
@@ -10470,6 +10474,7 @@ button.button.submit:before {
         float: left;
         background: #FFF;
         margin-top: 20px;
+        width:100%;
     }
 
     .related-pro .owl-item .item {
@@ -13810,7 +13815,7 @@ select#shipping-address-select {
 
 .fl-links {
     float: right;
-    background: #88be4c;
+    background: #f5e416;
 }
 
     .fl-links .clicker {
@@ -14266,4 +14271,7 @@ select#shipping-address-select {
 .logo img, .co-info img{
     max-height:94px;
     max-width: 172px;
+}
+.relatepr-img{
+    max-height: 240px;
 }
